<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.tasks.fragments.AddTaskFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.tasks.viewmodel.TaskViewModel" />

        <variable
            name="addTaskFragment"
            type="com.example.tasks.fragments.AddTaskFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/task"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/task"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task"
            android:autofillHints="" />

        <TextView
            android:id="@+id/staff_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:hint="@string/task"
            android:text="@string/staff_name"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTask" />

        <EditText
            android:id="@+id/addName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/staff_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staff_name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/set_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/event"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addName" />

        <EditText
            android:id="@+id/addEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/event_or_not"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_event" />

        <Button
            android:id="@+id/confirm_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="258dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add_task"
            android:textColor="@color/white"
            app:backgroundTint="#888787"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEvent" />

        <Button
            android:id="@+id/cancel_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="258dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:backgroundTint="#888787"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/confirm_add"
            app:layout_constraintTop_toBottomOf="@+id/addEvent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>